# testsuite

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN_GUIDE.md  Dockerfile  Dockerfile.ppc64le  Makefile  Pipfile  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini  setup.cfg  test_empty_defaults_bug_fix.py  ui.Dockerfile
.claude/commands/: debug-test.md  pr-description.md  rerun-report-portal-tests.md
.claude/rules/: extensions-setup.md  kuadrant-policies.md  kubernetes-infrastructure.md  prometheus-setup.md  test-patterns.md  test-reruns.md  tracing-setup.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: test-case.md
.github/workflows/: acceptance.yml  build_image.yml  build_release_image.yml  build_unstable_image.yml  build_unstable_ui_image.yml  project.yml  promote_to_latest.yml  re-enable-disabled-workflows.yml  release.yml  test-pr.yml  validate-pr-title.yml
config/: settings.local.yaml.tpl  settings.yaml
docker/: Dockerfile-ui
make/: components.mk  dependencies.mk  envoygateway.mk  istio.mk  kind.mk  kuadrant.mk  local-setup.mk  tools.mk  vars.mk
scale_test/: aws-credentials.yaml  compare.sh  comparison.json  config.yaml  control-plane-config.yaml  control-plane.md  dashboard.json  gw-auth-policy.yaml  gw-dns-policy.yaml  gw-rlp.yaml  gw-tls-policy.yaml  gw.yaml  httproute-auth-policy.yaml  httproute-rlp.yaml  httproute.yaml  metrics.yaml  namespaced-dns-operator-deployments-config.yaml  namespaced-dns-operator-deployments.md  readme.md
scale_test/dnspolicy/: README.md  gw-dnspolicy-loadbalanced.yaml  gw.yaml  httproute.yaml  namespaced-dns-operator-deployments.yaml
scale_test/max-gateway-listeners/: README.md  config.yaml  test.sh
scale_test/max-gateway-listeners/templates/: aws-credentials.yaml  azure-credentials.yaml  dnspolicy.yaml  gateway.yaml  gcp-credentials.yaml  httpbin-deployment.yaml  httpbin-service.yaml  httproute.yaml
scale_test/templates/: aws-credentials.yaml  gw-dns-policy.yaml  gw-rlp.yaml  gw-tls-policy.yaml  gw-tls.yaml  gw.yaml  httpbin-deployment.yaml  httpbin-service.yaml  httproute-auth-policy.yaml  httproute-listener.yaml  httproute-rlp.yaml  httproute.yaml  person-secret.yaml
scripts/: collect-component-metadata  junit2reportportal
testsuite/: __init__.py  capabilities.py  certificates.py  component_metadata.py  config.py  container_image_versions.py  kuadrantctl.py  lifecycle.py  log_collection.py  mockserver.py  oas.py  perf_utils.py  prometheus.py  template_utils.py  tracing.py  utils.py
testsuite/backend/: __init__.py  grpcbin.py  httpbin.py  llm_sim.py  mockserver.py
testsuite/backend/grpc/: grpcbin.proto  grpcbin_pb2.py  grpcbin_pb2.pyi
testsuite/certificates/: __init__.py
testsuite/chaos_mesh/: __init__.py  pod_chaos.py
testsuite/cli/: kuadrantctl.py  kubectl_dns.py
testsuite/config/: __init__.py  exposer.py  openshift_loader.py  tools.py
testsuite/core/: metrics_factory.py  topology.py
testsuite/custom_metrics_apiserver/: client.py
testsuite/gateway/: __init__.py  exposers.py  metrics.py  topology.py
testsuite/gateway/envoy/: __init__.py  config.py  jwt_plain_identity.py  route.py  tls.py  wristband.py
testsuite/gateway/gateway_api/: __init__.py  gateway.py  grpc_route.py  hostname.py  metrics_gateway.py  route.py
testsuite/grpc/: __init__.py
testsuite/httpx/: __init__.py  auth.py
testsuite/hyperfoil/: __init__.py
testsuite/istio/: __init__.py
testsuite/kuadrant/: __init__.py  authorino.py  limitador.py  metrics.py
testsuite/kuadrant/extensions/: oidc_policy.py  pipeline_policy.py  plan_policy.py  telemetry_policy.py
testsuite/kuadrant/policy/: __init__.py  dns.py  metric_validator.py  rate_limit.py  rate_limit_spec.py  tls.py  token_rate_limit.py
testsuite/kubernetes/: __init__.py  api_key.py  api_service.py  authorino.py  certificate.py  client.py  cluster_role.py  config_map.py  deployment.py  envoy_filter.py  horizontal_pod_autoscaler.py  ingress.py  kuadrant.py  role_binding.py  route.py  secret.py  service.py  service_account.py  service_monitor.py  vault.py
testsuite/kubernetes/istio/: destination_rule.py  service_entry.py
testsuite/objects/: __init__.py  gateway.py  hostname.py  sections.py
testsuite/oidc/: __init__.py  auth0.py  cookie_helper.py  test_client.py
testsuite/openshift/: __init__.py  api_key.py  authorino.py  backend.py  client.py  config_map.py  deployment.py  envoy.py  httpbin.py  ingress.py  kuadrant.py  limitador.py  route.py  secret.py  service.py  service_account.py
testsuite/page_objects/: nav_bar.py  navigator.py
testsuite/policy/: __init__.py  dns_policy.py  rate_limit_policy.py  tls_policy.py
testsuite/resources/: dinosaur_config.yaml  echo_expectation.json  envoy.yaml  httpbin.yaml  kuadrant_qe_ca.crt
testsuite/rhsso/: __init__.py  objects.py
testsuite/spicedb/: spicedb.py
testsuite/tests/: conftest.py  info_collector.py
testsuite/tracing/: __init__.py  jaeger.py  models.py  tempo.py
testsuite/utils/: __init__.py  constants.py
utils/: docker-network-ipaddresspool.sh
xslt/: polish-junit.xsl
(+674 files in other folders)
