[tool.poetry]
name = "kuadrant-testsuite"
version = "0.1.0"
description = "Tests for Kuadrant project"
authors = ["Kuadrant QE <kuadrantdev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.group.main.dependencies]
python = "^3.11"
typing_extensions = "*"
pytest-xdist = "*"
pytest = "*"
pytest-html = "*"
dynaconf = "*"
dnspython = "*"
python-keycloak = ">=3.6"
PyJWT = "*"
lxml = "*"
cryptography = "*"
backoff = "*"
httpx = { version = "*", extras = ["http2"] }
openshift-client = ">=2"
apyproxy = "*"
weakget = "*"
authzed = "*"
pytest-playwright = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"
types-PyYAML = "*"
black = {version = "*", extras = ["d"]}


# Black
[tool.black]
line-length = 120

# Pytest:
[tool.pytest.ini_options]
markers = [
    "issue: Reference to covered issue",
    "authorino: Test is using Authorino features",
    "standalone_only: Component test that can only run by itself, without Kuadrant",
    "kuadrant_only: Component test that can only run as a part of Kuadrant",
    "limitador: Test is using Limitador features",
    "tlspolicy: Test is using TLSPolicy",
    "dnspolicy: Test is using DNSPolicy",
    "extensions: Test is using the extensions framework",
    "smoke: Build verification test",
    "disruptive: Test is disruptive",
    "multicluster: Test is specifc to Multicluster deployment",
    "coredns_one_primary: CoreDNS multicluster tests using one primary cluster",
    "coredns_two_primaries: CoreDNS multicluster tests using two primary clusters",
    "defaults_overrides: Defaults and Overrides feature tests",
    "observability: Tracing, metrics and logging tests",
    "ui: Test uses browser automation via Playwright to test the console plugin UI",
]
filterwarnings = [
    "ignore: WARNING the new order is not taken into account:UserWarning",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
    "ignore::cryptography.utils.CryptographyDeprecationWarning"
]
log_format = "%(asctime)s %(levelname)s:%(name)s:%(message)s"
log_date_format = "%H:%M:%S %z"
log_level = "INFO"
junit_logging = "all"
junit_family = "xunit2"
xfail_strict = true

# Pylint:
[tool.pylint.FORMAT]
max-line-length = 120
disable = [
    "duplicate-code", # reports false alarms AND can't be disabled locally; pylint issue #214
    "fixme", # ignore TODOs
    "redefined-outer-name",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-few-public-methods"]

[tool.pylint.BASIC]
good-names=["i","j","k",
           "pytestmark",
           "logger",
           "ca", "gw"]

# Mypy:
[tool.mypy]
implicit_optional = true

[[tool.mypy.overrides]]
module = ["dynaconf.*", "keycloak.*", "weakget.*", "openshift_client.*", "apyproxy.*", "click.*", "py.*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
